updated swagger and regenerated code
